Fixed overflowing title on week view

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,6 +34,9 @@
 .fc-head-container.fc-widget-header, .fc-head-container .fc-widget-header {
   border: none; }
 
+.fc-content {
+  overflow-x: hidden !important; }
+
 .fc-day-header {
   color: #f9f9f9;
   text-shadow: rgba(0, 0, 0, 0.3) 1px 2px 3px; }
