--- a/public/css/sass/calendar.scss
+++ b/public/css/sass/calendar.scss
@@ -42,6 +42,9 @@
   border: none;
 }
 
+.fc-content {
+  overflow-x: hidden !important;
+}
 
 .fc-day-header {
   color: #f9f9f9;
